--- a/calculator_version1/index.html
+++ b/calculator_version1/index.html
@@ -39,5 +39,5 @@
  
 
 </body>
-    <script src="index.js"></script>
+    <script src="/Virtual-Calculator/calculator_version1/index.js"></script>
 </html>
